--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "tailwindcss": "3.4.17"
+    "tailwindcss": "3.4.17",
+    "lodash.debounce": "^4.0.8"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
