--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-version: '3.9'
-
+version: "3.9"
 services:
   api:
     build:
@@ -15,6 +14,20 @@ services:
     depends_on:
       - db
 
+  frontend:
+    image: node:20
+    working_dir: /app
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules  # ensures container keeps node_modules
+    ports:
+      - "5173:5173"
+    command: sh -c "npm install && npm run dev"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    depends_on:
+      - api
+
   db:
     image: postgres:16
     environment:
@@ -23,14 +36,6 @@ services:
       POSTGRES_PASSWORD: peyja123
     volumes:
       - pgdata:/var/lib/postgresql/data
-
-  frontend:
-    build:
-      context: ./frontend
-    ports:
-      - "3000:80"
-    depends_on:
-      - api
 
 volumes:
   pgdata:
