--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,19 +1,31 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
+    # React SPA root
     root /usr/share/nginx/html;
     index index.html;
 
+    # React SPA routes
     location / {
         try_files $uri /index.html;
     }
 
+    # API proxy to Django
     location /api/ {
-        proxy_pass http://api:8000/api/;
+        proxy_pass http://api:8000;  # no trailing /api/
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-}
 
+    # Django admin static files (if needed)
+    location /static/ {
+        alias /app/static/;
+    }
+
+    # Optional: add security headers
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-XSS-Protection "1; mode=block";
+}
