--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -21,3 +21,6 @@ EXPOSE 8000
 
 # Run Django with Gunicorn
 CMD ["gunicorn", "project.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "3"]
+
+ENV DEBIAN_FRONTEND=noninteractive
+
