--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -18,3 +18,6 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
+
+ENV DEBIAN_FRONTEND=noninteractive
+
