run each install individually

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -5,7 +5,10 @@ WORKDIR /app
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y curl gcc libpq-dev && apt-get clean
+RUN apt-get update
+RUN apt-get install -y curl
+RUN apt-get install -y gcc libpq-dev
+RUN apt-get clean
 
 # Install Python dependencies
 COPY requirements.txt .
