--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,8 @@ jobs:
       AWS_ECR_ACCOUNT: 401876438340
       LIGHTSAIL_HOST: ${{ secrets.LIGHTSAIL_HOST }}
       APP_DIR: ~/peyjabankinn
+      API_REPO: peyjabanki-api
+      FRONTEND_REPO: peyjabanki-frontend
       COMPOSE_FILE: docker-compose.prod.yml
 
     steps:
