--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,9 +3,7 @@ version: "3.9"
 services:
   # Backend (Django + Gunicorn)
   api:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile.prod
+    image: 401876438340.dkr.ecr.eu-west-1.amazonaws.com/peyjabanki-api:latest
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
@@ -20,9 +18,7 @@ services:
 
   # Frontend (React + Nginx)
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile.prod
+    image: 401876438340.dkr.ecr.eu-west-1.amazonaws.com/peyjabanki-frontend:latest
     ports:
       - "80:80"
     depends_on:
