--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,10 +66,10 @@ jobs:
           set -e
           echo "AWS_REGION=$AWS_REGION"
           cd $APP_DIR
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com
           docker pull $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$API_REPO:latest
           docker pull $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$FRONTEND_REPO:latest
-          docker-compose -f $COMPOSE_FILE up -d
+          docker-compose -f $COMPOSE_FILE pull
+          docker-compose -f $COMPOSE_FILE up -d --force-recreate
           docker-compose exec api python manage.py migrate --noinput
           docker-compose exec api python manage.py collectstatic --noinput
 
