--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,6 +21,10 @@ services:
     image: 401876438340.dkr.ecr.eu-west-1.amazonaws.com/peyjabanki-frontend:latest
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - static_volume:/usr/share/nginx/html/static
     depends_on:
       - api
 
