--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,31 +1,57 @@
 server {
     listen 80;
-    server_name _;
+    server_name peyjabanki.com www.peyjabanki.com;
 
-    # React SPA root
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name peyjabanki.com www.peyjabanki.com;
+
+    ssl_certificate /etc/letsencrypt/live/peyjabanki.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/peyjabanki.com/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+
+    # React build
     root /usr/share/nginx/html;
     index index.html;
 
-    # React SPA routes
     location / {
         try_files $uri /index.html;
     }
 
-    # API proxy to Django
+    # Django API
     location /api/ {
-        proxy_pass http://api:8000;  # no trailing /api/
+        proxy_pass http://api:8000;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $remote_addr;
     }
 
-    # Django admin static files (if needed)
+    # Django Admin
+    location /admin/ {
+        proxy_pass http://api:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $remote_addr;
+    }
+
+    # ✅ Django static files
     location /static/ {
-        alias /app/static/;
+        alias /usr/share/nginx/html/static/;
+        expires 30d;
+        access_log off;
     }
 
-    # Optional: add security headers
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
-    add_header X-XSS-Protection "1; mode=block";
 }
