--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,12 +2,12 @@ server {
     listen 80;
     server_name peyjabanki.com www.peyjabanki.com;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
     location / {
         return 301 https://$host$request_uri;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot; # Only needed if you ever renew via webroot
     }
 }
 
@@ -21,7 +21,6 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
-    # React build
     root /usr/share/nginx/html;
     index index.html;
 
@@ -29,7 +28,6 @@ server {
         try_files $uri /index.html;
     }
 
-    # Django API
     location /api/ {
         proxy_pass http://api:8000;
         proxy_set_header Host $host;
@@ -37,7 +35,6 @@ server {
         proxy_set_header X-Forwarded-For $remote_addr;
     }
 
-    # Django Admin
     location /admin/ {
         proxy_pass http://api:8000;
         proxy_set_header Host $host;
@@ -45,7 +42,6 @@ server {
         proxy_set_header X-Forwarded-For $remote_addr;
     }
 
-    # ✅ Django static files
     location /static/ {
         alias /usr/share/nginx/html/static/;
         expires 30d;
