--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Lightsail via ECR
 on:
   push:
     branches:
-      - main   # trigger on pushes to main branch
+      - main
 
 jobs:
   build-and-deploy:
@@ -19,57 +19,65 @@ jobs:
       COMPOSE_FILE: docker-compose.prod.yml
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      # 1️⃣ Checkout repo
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+      # 2️⃣ Configure AWS credentials (for ECR push)
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-    - name: Login to ECR
-      run: |
-        aws ecr get-login-password --region $AWS_REGION | \
-        docker login --username AWS --password-stdin $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com
+      # 3️⃣ Build & push backend
+      - name: Build backend image
+        run: |
+          docker build -t $API_REPO ./backend
+          docker tag $API_REPO:latest $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$API_REPO:latest
 
-    # --- Backend ---
-    - name: Build backend image
-      run: |
-        docker build -t $API_REPO ./backend
-        docker tag $API_REPO:latest $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$API_REPO:latest
+      - name: Push backend to ECR
+        run: |
+          docker push $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$API_REPO:latest
 
-    - name: Push backend image to ECR
-      run: |
-        docker push $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$API_REPO:latest
+      # 4️⃣ Build & push frontend
+      - name: Build frontend image
+        run: |
+          docker build -t $FRONTEND_REPO ./frontend
+          docker tag $FRONTEND_REPO:latest $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$FRONTEND_REPO:latest
 
-    # --- Frontend ---
-    - name: Build frontend image
-      run: |
-        docker build -t $FRONTEND_REPO ./frontend
-        docker tag $FRONTEND_REPO:latest $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$FRONTEND_REPO:latest
+      - name: Push frontend to ECR
+        run: |
+          docker push $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$FRONTEND_REPO:latest
 
-    - name: Push frontend image to ECR
-      run: |
-        docker push $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$FRONTEND_REPO:latest
+      # 5️⃣ Deploy to Lightsail
+      - name: Deploy on Lightsail
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.LIGHTSAIL_HOST }}
+          username: ubuntu
+          key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
+          envs: AWS_REGION,AWS_ECR_ACCOUNT,APP_DIR,API_REPO,FRONTEND_REPO,COMPOSE_FILE,AWS_ACCESS_KEY_ID,AWS_SECRET_ACCESS_KEY
+          script: |
+            set -e
+            cd $APP_DIR
 
-    # --- Deploy to Lightsail ---
-    - name: Deploy on Lightsail
-      uses: appleboy/ssh-action@v0.1.7
-      with:
-        host: ${{ secrets.LIGHTSAIL_HOST }}
-        username: ubuntu
-        key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
-        envs: AWS_REGION,AWS_ECR_ACCOUNT,APP_DIR,API_REPO,FRONTEND_REPO,COMPOSE_FILE
-        script: |
-          set -e
-          echo "AWS_REGION=$AWS_REGION"
-          cd $APP_DIR
-          docker pull $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$API_REPO:latest
-          docker pull $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$FRONTEND_REPO:latest
-          docker-compose -f $COMPOSE_FILE pull
-          docker-compose -f $COMPOSE_FILE up -d --force-recreate
-          docker-compose exec api python manage.py migrate --noinput
-          docker-compose exec api python manage.py collectstatic --noinput
+            # Install AWS CLI if missing
+            if ! command -v aws >/dev/null 2>&1; then
+              echo "Installing AWS CLI..."
+              sudo apt update
+              sudo apt install -y awscli
+            fi
 
+            # Login to ECR on Lightsail
+            aws ecr get-login-password --region $AWS_REGION | \
+              docker login --username AWS --password-stdin $AWS_ECR_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com
+
+            # Recreate containers
+            docker-compose -f $COMPOSE_FILE pull
+            docker-compose -f $COMPOSE_FILE up -d --force-recreate
+
+            # Run migrations & collect static
+            docker-compose exec api python manage.py migrate --noinput
+            docker-compose exec api python manage.py collectstatic --noinput
