--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,6 +21,15 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
+    if ($request_method = OPTIONS) {
+        add_header 'Access-Control-Allow-Origin' 'https://peyjabanki.com' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+        add_header 'Access-Control-Max-Age' 86400;
+        return 204;
+    }
+
     root /usr/share/nginx/html;
     index index.html;
 
