--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "tailwindcss": "3.4.17",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "i18next": "^23.0.0",
+    "react-i18next": "^13.0.0",
+    "i18next-browser-languagedetector": "^7.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
