--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,20 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "date-fns": "^4.1.0",
+    "i18next": "^23.0.0",
+    "i18next-browser-languagedetector": "^7.0.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "tailwindcss": "3.4.17",
-    "lodash.debounce": "^4.0.8",
-    "i18next": "^23.0.0",
     "react-i18next": "^13.0.0",
-    "i18next-browser-languagedetector": "^7.0.0"
+    "react-router-dom": "^6.16.0",
+    "tailwindcss": "3.4.17"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^5.1.0",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.5.0",
-    "autoprefixer": "^10.4.0"
+    "vite": "^5.1.0"
   }
 }
