--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 Django>=5.0
 djangorestframework
 djangorestframework-simplejwt
+django-rest-passwordreset
 django-cors-headers
 psycopg2-binary
 requests
