make whole card clickable in scorecard
update dockerfile to be more silent, prevent error in github actions

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,14 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
+# Set CI environment to avoid npm prompts in CI
+ENV CI=true
+ENV NPM_CONFIG_PROGRESS=false
+ENV NPM_CONFIG_LOGLEVEL=error
+
 # Copy package files first for caching
 COPY package.json package-lock.json* ./
-RUN npm install
+RUN npm install --no-optional --silent
 
 # Copy source code
 COPY . .
