--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,5 +80,6 @@ jobs:
             docker-compose -f $COMPOSE_FILE up -d
 
             # Run Django migrations & collectstatic
-            docker-compose exec api python manage.py migrate --noinput
-            docker-compose exec api python manage.py collectstatic --noinput
+            docker-compose exec -T api python manage.py migrate --noinput
+            docker-compose exec -T api python manage.py collectstatic --noinput
+
